// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diff() should not fail if retrival of the previous fs.stats from the GitLab API failed 1`] = `
[
  {
    "change": {
      "percent": 100,
      "pretty": "+1.71 KB",
      "raw": 1754,
    },
    "id": "src/mocks/files/normalize.css",
    "isBelowThreshold": true,
    "size": {
      "pretty": "1.71 KB",
      "raw": 1754,
    },
    "status": "added",
  },
  {
    "change": {
      "percent": 100,
      "pretty": "+1.9 KB",
      "raw": 1941,
    },
    "id": "src/mocks/files/normalize.css.zip",
    "isBelowThreshold": true,
    "size": {
      "pretty": "1.9 KB",
      "raw": 1941,
    },
    "status": "added",
  },
  {
    "change": {
      "percent": 100,
      "pretty": "+3.61 KB",
      "raw": 3695,
    },
    "id": "summary",
    "isBelowThreshold": true,
    "size": {
      "pretty": "3.61 KB",
      "raw": 3695,
    },
    "status": "added",
  },
]
`;

exports[`diff() should read the current fs.stats from disk and write them to the outFile path 1`] = `
[
  {
    "change": {
      "percent": 100,
      "pretty": "+1.71 KB",
      "raw": 1754,
    },
    "id": "src/mocks/files/normalize.css",
    "isBelowThreshold": true,
    "size": {
      "pretty": "1.71 KB",
      "raw": 1754,
    },
    "status": "added",
  },
  {
    "change": {
      "percent": 100,
      "pretty": "+1.9 KB",
      "raw": 1941,
    },
    "id": "src/mocks/files/normalize.css.zip",
    "isBelowThreshold": true,
    "size": {
      "pretty": "1.9 KB",
      "raw": 1941,
    },
    "status": "added",
  },
  {
    "change": {
      "percent": 100,
      "pretty": "+3.61 KB",
      "raw": 3695,
    },
    "id": "summary",
    "isBelowThreshold": true,
    "size": {
      "pretty": "3.61 KB",
      "raw": 3695,
    },
    "status": "added",
  },
]
`;

exports[`diff() should retreive the previous fs.stats from the GitLab API and create a diff based on the current fs.stats from disk 1`] = `
[
  {
    "change": {
      "percent": 71.94,
      "pretty": "-4.39 KB",
      "raw": -4497,
    },
    "id": "src/mocks/files/normalize.css",
    "isBelowThreshold": true,
    "size": {
      "pretty": "1.71 KB",
      "raw": 1754,
    },
    "status": "decreased",
  },
  {
    "change": {
      "percent": 0,
      "pretty": "0 Bytes",
      "raw": 0,
    },
    "id": "src/mocks/files/normalize.css.zip",
    "isBelowThreshold": true,
    "size": {
      "pretty": "1.9 KB",
      "raw": 1941,
    },
    "status": "unchanged",
  },
  {
    "change": {
      "percent": 54.9,
      "pretty": "-4.39 KB",
      "raw": -4497,
    },
    "id": "summary",
    "isBelowThreshold": true,
    "size": {
      "pretty": "3.61 KB",
      "raw": 3695,
    },
    "status": "decreased",
  },
]
`;

exports[`diff() should retry the retrival from the GitLab API if the last pipeline is still in 'created' state 1`] = `
[
  {
    "change": {
      "percent": 100,
      "pretty": "+1.71 KB",
      "raw": 1754,
    },
    "id": "src/mocks/files/normalize.css",
    "isBelowThreshold": true,
    "size": {
      "pretty": "1.71 KB",
      "raw": 1754,
    },
    "status": "added",
  },
  {
    "change": {
      "percent": 100,
      "pretty": "+1.9 KB",
      "raw": 1941,
    },
    "id": "src/mocks/files/normalize.css.zip",
    "isBelowThreshold": true,
    "size": {
      "pretty": "1.9 KB",
      "raw": 1941,
    },
    "status": "added",
  },
  {
    "change": {
      "percent": 100,
      "pretty": "+3.61 KB",
      "raw": 3695,
    },
    "id": "summary",
    "isBelowThreshold": true,
    "size": {
      "pretty": "3.61 KB",
      "raw": 3695,
    },
    "status": "added",
  },
]
`;

exports[`diff() should retry the retrival from the GitLab API if the last pipeline is still in 'pending' state 1`] = `
[
  {
    "change": {
      "percent": 100,
      "pretty": "+1.71 KB",
      "raw": 1754,
    },
    "id": "src/mocks/files/normalize.css",
    "isBelowThreshold": true,
    "size": {
      "pretty": "1.71 KB",
      "raw": 1754,
    },
    "status": "added",
  },
  {
    "change": {
      "percent": 100,
      "pretty": "+1.9 KB",
      "raw": 1941,
    },
    "id": "src/mocks/files/normalize.css.zip",
    "isBelowThreshold": true,
    "size": {
      "pretty": "1.9 KB",
      "raw": 1941,
    },
    "status": "added",
  },
  {
    "change": {
      "percent": 100,
      "pretty": "+3.61 KB",
      "raw": 3695,
    },
    "id": "summary",
    "isBelowThreshold": true,
    "size": {
      "pretty": "3.61 KB",
      "raw": 3695,
    },
    "status": "added",
  },
]
`;

exports[`diff() should retry the retrival from the GitLab API if the last pipeline is still in 'running' state 1`] = `
[
  {
    "change": {
      "percent": 100,
      "pretty": "+1.71 KB",
      "raw": 1754,
    },
    "id": "src/mocks/files/normalize.css",
    "isBelowThreshold": true,
    "size": {
      "pretty": "1.71 KB",
      "raw": 1754,
    },
    "status": "added",
  },
  {
    "change": {
      "percent": 100,
      "pretty": "+1.9 KB",
      "raw": 1941,
    },
    "id": "src/mocks/files/normalize.css.zip",
    "isBelowThreshold": true,
    "size": {
      "pretty": "1.9 KB",
      "raw": 1941,
    },
    "status": "added",
  },
  {
    "change": {
      "percent": 100,
      "pretty": "+3.61 KB",
      "raw": 3695,
    },
    "id": "summary",
    "isBelowThreshold": true,
    "size": {
      "pretty": "3.61 KB",
      "raw": 3695,
    },
    "status": "added",
  },
]
`;

exports[`diff() should retry the retrival from the GitLab API if the last pipeline is still in 'waiting_for_resource' state 1`] = `
[
  {
    "change": {
      "percent": 100,
      "pretty": "+1.71 KB",
      "raw": 1754,
    },
    "id": "src/mocks/files/normalize.css",
    "isBelowThreshold": true,
    "size": {
      "pretty": "1.71 KB",
      "raw": 1754,
    },
    "status": "added",
  },
  {
    "change": {
      "percent": 100,
      "pretty": "+1.9 KB",
      "raw": 1941,
    },
    "id": "src/mocks/files/normalize.css.zip",
    "isBelowThreshold": true,
    "size": {
      "pretty": "1.9 KB",
      "raw": 1941,
    },
    "status": "added",
  },
  {
    "change": {
      "percent": 100,
      "pretty": "+3.61 KB",
      "raw": 3695,
    },
    "id": "summary",
    "isBelowThreshold": true,
    "size": {
      "pretty": "3.61 KB",
      "raw": 3695,
    },
    "status": "added",
  },
]
`;
